// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adaptiveAspects cookie server invalid 1`] = `
"{
 \\"$serialized$\\": \\"inst\\",
 \\"module\\": \\"UICore/Adaptive:_AdaptiveModeClass\\",
 \\"id\\": \\"am_2\\",
 \\"state\\": {
  \\"containerClientWidth\\": 1025,
  \\"containerClientHeight\\": 769
 }
}"
`;

exports[`adaptiveAspects cookie server set 1`] = `Object {}`;

exports[`adaptiveAspects cookie server set with dots 1`] = `Object {}`;

exports[`adaptiveAspects cookie server valid 1`] = `
"{
 \\"$serialized$\\": \\"inst\\",
 \\"module\\": \\"UICore/Adaptive:_AdaptiveModeClass\\",
 \\"id\\": \\"am_1\\",
 \\"state\\": {
  \\"containerClientWidth\\": 1025,
  \\"containerClientHeight\\": 769
 }
}"
`;
